--- a/P5/style.css
+++ b/P5/style.css
@@ -1,16 +1,20 @@
 *{
 	margin: 0px;
 	padding: 0px;
-}
-
-*{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
 }
-
+body{
+	background-color: silver;
+}
 #titulo{
-font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 40px;
+	color: white;
+}
+#subtitulo{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
 	color: white;
 }
 #header{
@@ -18,9 +22,12 @@ font-family: 'Montserrat', sans-serif;
 	background-color: gray;
 	width: 100%;
 	height: 100px;
-
 }
-#canvas{
+#espacio{
+	margin: 10px;
+	text-align: center;
     background-color: silver;
-    align: center;
+}
+#modifiers{
+	text-align: center;
 }
