--- a/P5/puntos/style.css
+++ b/P5/puntos/style.css
@@ -4,10 +4,6 @@
 	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
 }
-body{
-	margin: 0px;
-	padding: 0px;
-}
 #titulo{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 40px;
@@ -23,11 +19,17 @@ body{
 	background-color: gray;
 	width: 100%;
 	height: 100px;
-}
-#espacio{
-	margin: 10px;
-	text-align: center;
+	position: fixed;
+	top: 0px;
+	left: 0px;
 }
 #modifiers{
 	text-align: center;
 }
+#espacio{
+	width: 100%;
+	text-align: center;
+	background-color: blue;
+}
+.p5Canvas{
+	background-color:orange;
