--- a/P5/skel/style.css
+++ b/P5/skel/style.css
@@ -1,33 +1,23 @@
-*{
-	margin: 0px;
-	padding: 0px;
+body,html{
+	margin: 0;
+	padding: 0;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
-}
-body{
-	margin: 0px;
-	padding: 0px;
+	text-align: center;
 }
 #titulo{
-	font-family: 'Montserrat', sans-serif;
 	font-size: 40px;
-	color: white;
-}
-#subtitulo{
-	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;
-	color: white;
+	margin: 0px;
 }
 #header{
-	text-align: center;
-	background-color: gray;
 	width: 100%;
 	height: 100px;
+	position: fixed;
+	background-color: gray;
 }
 #espacio{
-	margin: 10px;
-	text-align: center;
-}
-#modifiers{
-	text-align: center;
+	padding-top:8%;
+	}
+#container{
+	width: 100%;
 }
