--- a/P5/2d/style.css
+++ b/P5/2d/style.css
@@ -4,7 +4,6 @@ body,html{
 	font-family: 'Montserrat', sans-serif;
 	font-size: 20px;
 	text-align: center;
-	background-color: rgb(155,155,155);
 }
 #titulo{
 	font-size: 40px;
@@ -17,11 +16,9 @@ body,html{
 	position: fixed;
 	background-color: gray;
 }
-#container{
-align-self: center;
-padding: 7%;
-}
 #espacio{
-	margin: 5%;
-	padding: 0;
+	padding-top:8%;
+	}
+#container{
+	width: 100%;
 }
