--- a/P5/26042020 - copia midi/style.css
+++ b/P5/26042020 - copia midi/style.css
@@ -11,17 +11,12 @@ body,html{
 	margin: 0px;
 	color: white;
 }
-#header{
+.header{
 	width: 100%;
 	height: 100px;
 	position: fixed;
 	background-color: gray;
 }
-#container{
-align-self: center;
-padding: 7%;
-}
 #espacio{
 	margin: 5%;
-	padding: 0;
 }
