--- a/P5/Hanoi Towers/style.css
+++ b/P5/Hanoi Towers/style.css
@@ -9,11 +9,11 @@ body,html{
 #titulo{
 	font-size: 40px;
 	margin: 0px;
+	padding: 0px;
 	color: white;
 }
 #header{
 	width: 100%;
-	height: 100px;
 	position: fixed;
 	background-color: gray;
 }
